Added the core grid functionality.
Squashed commit of the following:

commit ed3736df614596699289ad602ec1f0dbf4f6e1ab
Author: Ahmad Rahima <ahmadrahimaim@gmail.com>
Date:   Sun Sep 3 18:23:55 2023 +0300

    Added the core grid functionality.

--- a/src/meson.build
+++ b/src/meson.build
@@ -31,6 +31,7 @@ mine_sweeper_sources = [
   'main.py',
   'window.py',
   'main_content.py',
+  'cell.py',
 ]
 
 install_data(mine_sweeper_sources, install_dir: moduledir)
