Added core status bar functionality.
Squashed commit of the following:

commit 67989f14bb8b6eb74a4572b4024ae5f06da4f946
Author: Ahmad Rahima <ahmadrahimaim@gmail.com>
Date:   Fri Sep 1 18:42:38 2023 +0300

    Added status-bar.

--- a/src/meson.build
+++ b/src/meson.build
@@ -32,6 +32,7 @@ mine_sweeper_sources = [
   'window.py',
   'main_content.py',
   'cell.py',
+  'status_bar.py',
 ]
 
 install_data(mine_sweeper_sources, install_dir: moduledir)
